# image-ppt-king

./: .gitignore  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json  pyproject.toml
docs/: architecture.md  artifact-contract.md  qa-rubric.md
examples/demo/: README.md
examples/demo/visual-layers/slide-01/: manifest.json
skills/image-ppt-king/: SKILL.md  package-lock.json  package.json
skills/image-ppt-king/agents/: openai.yaml
skills/image-ppt-king/assets/demo/: elements.json  text-layer.json
skills/image-ppt-king/assets/demo/visual-layers/slide-01/: manifest.json
skills/image-ppt-king/references/: acceptance-rubric.md  copyslides-like-reconstruction.md  runtime-and-platform.md  text-layer-schema.md  visual-anchor-text.md
skills/image-ppt-king/scripts/: build_ppt_from_layers.mjs  visual_text_qa.py
