[project]
name = "image-ppt-king"
version = "0.1.0"
description = "Convert flat slide images and Image Split layers into editable PowerPoint decks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "numpy>=2.0",
  "pillow>=10.0",
]

[tool.ruff]
line-length = 120
